--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -47,7 +47,9 @@
         </div>
     </nav>
     <!--Add a dealer table here -->
-
+    <h1>        Telefono 123123123        </h1>
     </body>
 
 </html>
+
+
