--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -47,7 +47,11 @@
         </div>
     </nav>
     <!--Add a dealer table here -->
-
+    <h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We sell domestic and imported cars at reasonable prices.
+        </h1>
     </body>
 
 </html>
+
+
