--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -46,7 +46,14 @@
             </ul>
         </div>
     </nav>
+
+    <div class="container">
     <!--Add a dealer table here -->
+    {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-warning" role="alert">{{ message }}</div>
+    {% endfor %}
+    {% endif %}
     <table class="table" id="table" data-filter-control="true">
         <thead>
             <tr>
@@ -72,6 +79,7 @@
             {% endfor %}
         </tbody>
     </table>
+    </div>
     </body>
     <script>
         $(function() {
